[package]
name = "manualfuture"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run"
path = "src/main.rs"


[lib]
name = "manualfuture"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
